@@ -3,7 +3,11 @@
 	* mpn/x86/x86-defs.m4 (LEA): Support non-PIC code.
 	* mpn/x86/darwin.m4 (LEA): Likewise.
 
-	* tests/x86call.asm: Rewrite for code size and to support PIC.
+	* tests/amd64call.asm: Rewrite for code size, and to match calls and
+	returns.
+
+	* tests/x86call.asm: Rewrite for code size, to support PIC, and to
+	match calls and returns.
 	* tests/x86check.c: Rewrite.
 
 2010-11-22  Torbjorn Granlund  <tege@gmplib.org>
